Fix routines display on mobile and remove the forms on older entries shown

--- a/app/assets/stylesheets/pages/activities.scss
+++ b/app/assets/stylesheets/pages/activities.scss
@@ -1,5 +1,3 @@
-
-
 body.activities.show .muscle-groups.show {
   float: right;
   width: 100%;
@@ -69,15 +67,26 @@ body.activities.show .user-markdown {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
+  .reps, .work {
+    width: 25%;
+  }
+  // Makes it so our weight in weightligting is aligned center, otherwise it
+  // looks a bit weird
+  .reps ~ .work input {
+    text-align: center;
+  }
   .meta {
-    width: 3rem;
+    justify-content: flex-end;
+    flex-grow: 0;
   }
   .when {
     font-size: $font-size-small;
     color: rgba($black, .75);
+    text-align: center;
   }
   .calories {
     margin-right: $spacing-small;
+    text-align: center;
   }
   .unit, .reps + .fa-times {
     font-size: $font-size-tiny;
@@ -89,13 +98,10 @@ body.activities.show .user-markdown {
     color: rgba($black, .25);
   }
   div {
-    width: calc(50% - 3rem);
     display: flex;
-    width: 100%;
     align-items: center;
-    + div {
-      padding-left: $spacing-small;
-    }
+    flex-grow: 1;
+    justify-content: center;
   }
 }
 
